--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -1,6 +1,6 @@
 .TH "FAPOLICYD-CLI" "8" "Dec 2021" "Red Hat" "System Administration Utilities"
 .SH NAME
-fapolicyd-cli \- Fapolicyd CLI Tool
+fapolicyd-cli \- fapolicyd CLI Tool
 .SH SYNOPSIS
 \fBfapolicyd-cli\fP [\fIoptions\fP]
 .SH DESCRIPTION
@@ -49,7 +49,7 @@ This command updates the size and hash of any matching paths in the file trust d
 Use after \fBfile\fP option. Makes every command of \fBfile\fP option operate on a single trust file named \fBtrust-file-name\fP that is located inside trust.d directory. If a trust file with such a name does not exist inside trust.d directory, it is created.
 .TP
 .B \-t, \-\-ftype /path/to/file
-Prints the mime type of the file given. A full path must be specified. This command is intended to help get the ftype parameter of rules correct by seeing how fapolicyd will classify it. Fapolicyd may differ from the \fBfile\fP command.
+Prints the mime type of the file given. A full path must be specified. This command is intended to help get the ftype parameter of rules correct by seeing how fapolicyd will classify it. fapolicyd may differ from the \fBfile\fP command.
 .TP
 .B \-l, \-\-list
 Prints a listing of the fapolicyd rules file with a rule number to aid in troubleshooting or understanding of the debug messages.
