--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - Add escaping to /proc/mount entries
 - Revise escaping of trust files
 - Add LimitNOFILE to the service file
+- Add dpkg support (Stephen Tridgell)
 
 1.2
 - On shutdown when running reports, if trust db empty warn (Nobuhiro Iwamatsu)
