Fix typo in man page

--- a/doc/fapolicyd.conf.5
+++ b/doc/fapolicyd.conf.5
@@ -44,7 +44,7 @@ This option controls how many entries the subject cache holds. You want the size
 
 .TP
 .B obj_cache_size
-This option controls how many entries the object cache holds. You want the size to be big enough that you are not getting too many evictions compared to hits. But you don't want to waste memory. Whenever there is an eviction, fapolicyd has to regenerate information about the subject and this slows performance. The default value is 8191.
+This option controls how many entries the object cache holds. You want the size to be big enough that you are not getting too many evictions compared to hits. But you don't want to waste memory. Whenever there is an eviction, fapolicyd has to regenerate information about the object and this slows performance. The default value is 8191.
 
 .TP
 .B watch_fs
