--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
-1.2.1
+1.3
 - Be consistent in updating and removing file system marks
 - Add escaping to /proc/mount entries
 - Revise escaping of trust files
 - Add LimitNOFILE to the service file
 - Add dpkg support (Stephen Tridgell)
+- Add support for runtime reloading of rules
 
 1.2
 - On shutdown when running reports, if trust db empty warn (Nobuhiro Iwamatsu)
