--- a/doc/rpm-filter.conf.5
+++ b/doc/rpm-filter.conf.5
@@ -1,13 +1,13 @@
 .TH FAPOLICYD.FILTER: "26" "April 2023" "Red Hat" "System Administration Utilities"
 .SH NAME
-fapolicyd.filter \- fapolicyd filter configuration file
+fapolicyd-filter.conf \- fapolicyd filter configuration file
 .SH DESCRIPTION
 The file
-.I /etc/fapolicyd/rpm-filter.filter.conf
+.I /etc/fapolicyd/rpm-filter.conf
 was migrated to
 .I /etc/fapolicyd/fapolicyd-filter.conf
 or see
-.BR fapolicyd.filter(5).
+.BR fapolicyd-filter.conf(5).
 
 
 
