--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-1.3.1
+1.3.2
 
+1.3.1
+- Fix not complete patch for filter file renaming
 
 1.3
 - Be consistent in updating and removing file system marks
