--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
+1.3.3
+
 1.3.2
 - Remove LimitNOFILE and instead setrlimit more carefully
 - Sync q_size to the documentation
+- Fix multiple memory leaks
 
 1.3.1
 - Fix not complete patch for filter file renaming
