--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1.3.3
+Improve dpkg support (Stephen Tridgell)
+Fix issue when no initial mount points (wjhunter3)
 Add RuntimeDirectory to the systemd service file
+Update code to support NGROUPS_MAX group id's
+Improve mount point detection code
 
 1.3.2
 - Remove LimitNOFILE and instead setrlimit more carefully
