Update path to state file

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -83,7 +83,7 @@ If you are running in the debug mode and wish to compare rule numbers reported i
 .B /var/log/fapolicyd-access.log
 - information about what was being accessed.
 .P
-.B /var/run/fapolicyd.state
+.B /run/fapolicyd/fapolicyd.state
 - internal performance metrics
 
 .SH "SEE ALSO"
