Add --reload-rules doc
- add to man page
- add to bash completion

--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -56,6 +56,9 @@ Prints a listing of the fapolicyd rules file with a rule number to aid in troubl
 .TP
 .B \-u, \-\-update
 Notifies fapolicyd to perform an update of the trust database.
+.TP
+.B \-r, \-\-reload-rules
+Notifies fapolicyd to perform a reload of the rules.
 .SH "SEE ALSO"
 .BR fapolicyd (8),
 .BR fapolicyd.rules (5),
