--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,15 @@
 1.3.3
-Improve dpkg support (Stephen Tridgell)
-Fix issue when no initial mount points (wjhunter3)
-Add RuntimeDirectory to the systemd service file
-Update code to limit the number group id's logged
-Improve mount point detection code
+- Improve dpkg support (Stephen Tridgell)
+- Fix issue when no initial mount points (wjhunter3)
+- Add RuntimeDirectory to the systemd service file
+- Update code to limit the number group id's logged
+- Improve mount point detection code
+- Double the amount of groups a user could have (32)
+- Small performance improvement by not double rewinding descriptor
+- Improve logging: make stderr output more colourful; add timestamps (Kangie)
+- Identify ruleset being loaded by a sha hash of the rule file (John Wass)
+- Add 22-buildroot.rules to use if the machine builds software
+- Add --with-asan for configure
 
 1.3.2
 - Remove LimitNOFILE and instead setrlimit more carefully
