Configurable metric reporting interval
Provides recurring metric reports at a specified interval using a nonblocking timerfd and pthread_cond_timedwait. The interval is configured through the report_interval key in fapolicyd.conf. This value represents the length of interval in seconds between reports. If set to 0 reporting intervals are disabled, this is the default.

Reports are written to the fapolicyd.state file. The output format and contents of this file are unchanged by this PR. This is the same file that was written at shutdown and upon receiving SIGUSR1. The signal handling function remains unchanged.

Error handling is based around disabling interval reporting to preserve the decision thread. When an unrecoverable reporting error occurs the interval reports are disabled and the decision thread will use the non-interval report handler for the remainder of it's execution.

The structuring of the reporting loop gives priority to the fan handling loop. When a reporting interval expires, the fan handler runs prior to writing the report to prioritize the fan handling and also to ensure the cache stats are as recent as possible. Also the reporting loop is only entered when no fan events have been recorded.

This PR also restructure the initialization of the decision thread and reporting loop to ensure a fresh fapolicyd.state file when fapolicyd starts. The previous behavior was that the file from the last shutdown was still present until either a SIGUSR1 or shutdown.

--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -17,7 +17,7 @@ Opens fapolicyd.conf and parses it to see if there are any syntax errors in the 
 Check the PATH environmental variable against the trustdb to look for file not in the trustdb which could cause problems at run time.
 .TP
 .B \-\-check-status
-Dump the daemon's internal performance statistics.
+Dump the daemon's internal performance statistics. See also the fapolicyd.conf option \fBreport_interval\fP.
 .TP
 .B \-\-check-trustdb
 Check the trustdb against the files on disk to look for mismatches that will cause problems at run time.
