--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 1.3.4
+- Fix race on fanotify fd on termination
+- Improve efficiency loading the rpm database into trust db
 
 1.3.3
 - Improve dpkg support (Stephen Tridgell)
