Allow rules to express paths using globbing (fnmatch)

--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -127,7 +127,7 @@ The object is the file that the subject is interacting with. The fields in the r
 This matches against any obbject. When used, this must be the only object in the rule.
 .TP
 .B path
-This is the full path to the file that will be accessed. Globbing is not supported. You may also use the special keyword \fBuntrusted\fP to match on the object not being listed in the rpm database.
+This is the full path to the file that will be accessed. You may also use the special keyword \fBuntrusted\fP to match on the object not being listed in the rpm database. You can use wildcards for untrusted files e.g. /media/*/smb/scripts/*, however this may result in poor performance and negative security implications.
 .TP
 .B dir
 If you wish to match on access to any file in a directory, then use this by giving the full path to the directory. Its recommended to end with the / to ensure it matches a directory. There are 3 keywords that \fIdir\fP supports: \fBexecdirs\fP, \fBsystemdirs\fP, \fBuntrusted\fP. See the \fBdir\fP option under Subject for an explanation of these keywords.
@@ -169,7 +169,7 @@ will run and compile all these component files into one master file, compiled.ru
 .B fagenrules
 man page for more information.
 
-When you are writing a rule for the execute permission, remember that the file to be executed is an 
+When you are writing a rule for the execute permission, remember that the file to be executed is an
 .B object.
 For example, you type ssh into the shell. The shell calls execve on /usr/bin/ssh. At that instant in time, ssh is the object that bash is working on. However, if you are blocking execution
 .I from
