--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.3.6
 - Increase the default subject cache size
+- Move fapolicyd-rpm-loader to bin directory
 
 1.3.5
 - Raise default value for db_max_size
