--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 - Suppress the subject cache eviction for scripts run by interpreters
 - Fix decriptor leak in previous release - only leaks on rpminstall/delete
 - Improve performance of filter code
+- Drop 'device' keyword for subject part of a rule
+- Add documentation to fapolicyd-filter.conf for better understanding
 
 1.3.5
 - Raise default value for db_max_size
