Add --test-filter to fapolicy-cli
There currently is no way to check the filter. This new option
takes a path to a file and replies with allow or deny to let you
know if the filter is working right. This can be handy when adding
more rules to fine tune what's in the trust database.

This also updates the bash_completions and man page.

--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -48,6 +48,10 @@ This command updates the size and hash of any matching paths in the file trust d
 .B \-\-trust-file trust-file-name
 Use after \fBfile\fP option. Makes every command of \fBfile\fP option operate on a single trust file named \fBtrust-file-name\fP that is located inside trust.d directory. If a trust file with such a name does not exist inside trust.d directory, it is created.
 .TP
+.B --test-filter /path/to/file
+Test FILTER_FILE against the given path and print "allow" if the
+filter permits it or "deny" otherwise.
+.TP
 .B \-t, \-\-ftype /path/to/file
 Prints the mime type of the file given. A full path must be specified. This command is intended to help get the ftype parameter of rules correct by seeing how fapolicyd will classify it. Fapolicyd may differ from the \fBfile\fP command.
 .TP
