--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 - Improve performance of filter code
 - Drop 'device' keyword for subject part of a rule
 - Add documentation to fapolicyd-filter.conf for better understanding
+- Fix build flags for Debian to include libmd
+- Add --test-filter to fapolicy-cli to help test filter rules
+- Fix bug in the filter that was allowing unexpected files though the filter
 
 1.3.5
 - Raise default value for db_max_size
