--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 1.3.7
-- Refactor queue to unify enqueue and dequeue
+- Refactor queue to unify enqueue and dequeue and make it lockless
  
 1.3.6
 - Increase the default subject cache size
