--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1.3.7
 - Refactor queue to unify enqueue and dequeue and make it lockless
+- Improve text/x-shellscript detection
+- Add watched mount points to state report - important since they can change
  
 1.3.6
 - Increase the default subject cache size
