Add Object cache warning
Opportunistically check eviction ratios for the object cache and warn
the admin to increase cache size when thresholds are exceeded.

Adds an eviction monitor for the object cache that periodically checks
occupancy and eviction ratios, warning administrators when thresholds
indicate the cache is undersized.

Integrated the new eviction check into cache initialization and flush
routines.

Emitted a final reminder on shutdown if high object cache eviction
ratios were detected during runtime.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - Improve text/x-shellscript detection
 - Fix bug in fapolicyd-cli --ftype detection which was introduced in 1.3.6
 - Add watched mount points to state report - important since they can change
+- Warn when object cache eviction ratios are high
  
 1.3.6
 - Increase the default subject cache size
