--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Fix bug in fapolicyd-cli --ftype detection which was introduced in 1.3.6
 - Add watched mount points to state report - important since they can change
 - Warn when object cache eviction ratios are high
+- Use uthash for trust file backend duplication detection
  
 1.3.6
 - Increase the default subject cache size
