--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,8 @@
 - Add watched mount points to state report - important since they can change
 - Warn when object cache eviction ratios are high
 - Use uthash for trust file backend duplication detection
- 
+- Update subject identity collection to gather all uid/gid components
+
 1.3.6
 - Increase the default subject cache size
 - Move fapolicyd-rpm-loader to bin directory
