cli: add --check-ignore_mounts option
add --check-ignore_mounts option that can optionally take a target mount point on the comand line to override the ignore_mounts configuration. Otherwise it parses ignore_mounts, walks each directory to look for files that could be executed, and exits non-zero when %languages MIME matches are found. It is important to highlight this concern because when the mount is ignored and has executable material, it cannot be controlled by fapolicyd.

--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -25,6 +25,14 @@ Check the trustdb against the files on disk to look for mismatches that will cau
 .B \-\-check-watch_fs
 Check the mounted file systems against the watch_fs daemon config entry to determine if any file systems need to be added to the configuration.
 .TP
+.B \-\-check-ignore_mounts[=mount-point]
+Inspect the ignore_mounts list or the provided mount point for potentially
+executable content. The command verifies that each mount exists, confirms the
+presence of the \fBnoexec\fP option, and scans the directory tree for files
+matching the \fB%languages\fP macro. Any matches are reported and a summary per
+mount is displayed. A non-zero status is returned when suspicious files are
+found so automated workflows can gate changes.
+.TP
 .B \-d, \-\-delete-db
 Deletes the trust database. Normally this never needs to be done. But if for some reason the trust database becomes corrupted, then the only method of recovery is to run this command.
 .TP
