--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - add --check-ignore_mounts option to fapolicyd-cli
 - Fix overlay filesystem detection in fapolicyd-cli --check-watch_fs
 - Fix fapolicyd-cli --check-path so that it properly detects symlinked dirs
+- In fapolicyd-cli, add --verbose flag to --check-ignore_mounts
 
 1.3.7
 - Refactor queue to unify enqueue and dequeue and make it lockless
