--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 - Fix overlay filesystem detection in fapolicyd-cli --check-watch_fs
 - Fix fapolicyd-cli --check-path so that it properly detects symlinked dirs
 - In fapolicyd-cli, add --verbose flag to --check-ignore_mounts
+- Watch the /run partition
+- Update some config items in SIGHUP
 
 1.3.7
 - Refactor queue to unify enqueue and dequeue and make it lockless
