--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 - Watch the /run partition
 - Update some config items in SIGHUP
 - Clarify warnings for fapolicyd-cli --check-trustdb
+- Rpm and file backend checks/updates got performance improvement
 
 1.3.7
 - Refactor queue to unify enqueue and dequeue and make it lockless
