--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.3.8
+1.4
 - Add ignore_mounts option to fapolicyd to not watch some mount points
 - add --check-ignore_mounts option to fapolicyd-cli
 - Fix overlay filesystem detection in fapolicyd-cli --check-watch_fs
@@ -8,6 +8,7 @@
 - Update some config items in SIGHUP
 - Clarify warnings for fapolicyd-cli --check-trustdb
 - All trust source backend checks/updates performance improvement
+- Fix line too long error when last line of conf file had no newline
 
 1.3.7
 - Refactor queue to unify enqueue and dequeue and make it lockless
