--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 1.4.2
 - Correct identification of kworker threads
 - Fix various threading, initialization, and function attribute issues
+- Add support for SHA512, replace SHA256HASH with FILE_HASH
 
 1.4.1
 - Fix deadlock on reconfigure
