Add --filter option to fapolicyd-cli --file
Added a --filter flag to fapolicyd-cli file subcommands, parsing it alongside --trust-file and extending help text to advertise the new option.

Applied filter processing to file additions and updates via the new filter_prune_list helper and filter-aware trust file updates so excluded paths are skipped safely.

Updated documentation, bash completions, and test suite to cover the filter-enabled workflow, including a new file_filter_test unit test and build wiring.

--- a/doc/fapolicyd-cli.8
+++ b/doc/fapolicyd-cli.8
@@ -51,6 +51,9 @@ This command deletes all entries that match from the trust database. It will try
 .TP 12
 .B update
 This command updates the size and hash of any matching paths in the file trust database. If no path is given, then all files are updated. If an argument is passed, then only matching paths get updated. If the intent is to match against a directory, ensure that it ends with '/'.
+.TP 12
+.B --filter
+When used with \fBadd\fP or \fBupdate\fP, evaluate the selected files and directories through the filter configuration (\fIfapolicyd-filter.conf\fP). Paths excluded by the filter are skipped so only allowed entries are added or refreshed.
 .RE
 .TP
 .B \-\-trust-file trust-file-name
