--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Correct identification of kworker threads
 - Fix various threading, initialization, and function attribute issues
 - Add support for SHA512, replace SHA256HASH with FILE_HASH
+- Add --filter option to fapolicyd-cli --file
 
 1.4.1
 - Fix deadlock on reconfigure
