Update filter_check handling and documentation
It was decided that anything over MAX_FILTER_DEPTH number of directories will be excluded from the trust database.

Clarified filter_check return code documentation and ensured depth overflows are logged and treated as exclusions while pruning lists or evaluating paths, avoiding premature aborts when walking filtered content.

Adjusted RPM loader and trust file updates to skip paths that exceed filter nesting limits while continuing to process remaining entries, recording warnings for administrators.

Updated the fapolicyd-filter.conf man page to describe that over-depth paths are excluded but do not stop trust database processing.

--- a/doc/fapolicyd-filter.conf.5
+++ b/doc/fapolicyd-filter.conf.5
@@ -6,7 +6,7 @@ The file
 .I /etc/fapolicyd/fapolicyd-filter.conf
 contains configuration of the filter for the application allowlisting daemon. This filter specifies an allow or exclude list of files from a trust source. Valid line starts with character '+', '-' or '#' for comments. The rest of the line contains a path specification. Space can be used as indentation to add more specific filters to the previous one. Note, that only one space is required for one level of an indent. If  there are multiple specifications on the same indentation level they extend the previous line with lower indentation, usually a directory.  The path may be specified using the glob pattern. A directory specification has to end with a slash ‘/’.
 
-The filters are processed as follows: Starting from the up the to bottom while in case of a match the result (+/-) is set unless there is an indented block which describes more detailed specification of the parent level match. The same processing logic is applied to the inner filters definitions. If there is no match, the parent’s result is set. If there is no match at all, the default result is minus (-). Filters are stored internally as a tree of path fragments marked to keep or drop. The evaluator walks that tree iteratively (no recursion) using a stack that tracks the current depth and offset into the path being inspected. This keeps memory usage predictable even when filters are deeply nested. Real-world policy relies on shallow nesting, but the implementation will refuse to load or evaluate filters that nest more than 64 directory levels to prevent runaway stacks.
+The filters are processed as follows: Starting from the up the to bottom while in case of a match the result (+/-) is set unless there is an indented block which describes more detailed specification of the parent level match. The same processing logic is applied to the inner filters definitions. If there is no match, the parent’s result is set. If there is no match at all, the default result is minus (-). Filters are stored internally as a tree of path fragments marked to keep or drop. The evaluator walks that tree iteratively (no recursion) using a stack that tracks the current depth and offset into the path being inspected. This keeps memory usage predictable even when filters are deeply nested. Real-world policy relies on shallow nesting, but the implementation will refuse to load filters that nest more than 64 directory levels to prevent runaway stacks. Any path that would exceed that limit during evaluation is treated as excluded while processing of the remaining files continues.
 
 If the result was a plus (+), the respective file from a trust source is imported to the TrustDB. Vice versa, if the result was a minus (-), the respective file is not imported.
 
