Add --version to the daemon

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -40,6 +40,9 @@ only in debug mode will the daemon use this flag to override the source of fanot
 .TP
 .B \-\-no-details
 when fapolicyd ends, it dumps a usage report with various statistics that may be useful for tuning performance. It can also detail which processes it knew about and files being accessed by them. This can be useful for forensics investigations. In some settings, this may not be desirable as the file names may be sensitive. Using this option removes process and file names leaving only the statistics. The default without giving this option is to generate a full report.
+.TP
+.B \-\-version
+display version information and exit.
 .SH SIGNALS
 .TP
 .B SIGTERM
